
cmake_minimum_required(VERSION 3.13)
project(CompGeom)

set(CMAKE_CXX_STANDARD 14)

add_executable(CompGeom main.cpp)
add_executable(E E.cpp)
add_executable(C C.cpp)
add_executable(H H.cpp)
add_executable(I I.cpp)
add_executable(J J.cpp)
add_executable(N N.cpp)
add_executable(L L.cpp)
add_executable(B B.cpp)
add_executable(K K.cpp)